--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body{
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 header{
   padding: 0;
@@ -32,10 +31,18 @@ h1{
   padding: 0;
   align-items: center;
 }
+main{
+  text-align: center;
+}
+.slides{
+  display: flex;
+}
 footer{
   border: 4px solid black;
   background-color: lightslategray;
 }
 .footer{
   display: flex;
+  
+  text-align: center;
 }
